editing to reflect random forest ensemble

--- a/documents/salmon-forecast-paper.Rmd
+++ b/documents/salmon-forecast-paper.Rmd
@@ -381,9 +381,9 @@ Predictive performance of candidate models was calculated by generating 1-year a
 
 ## Ensemble Models {.unnumbered}
 
-The testing regime allows us to compare the predictive power, defined by SRMSE, of individual models at a variety of spatial resolutions. However, a substantial body of literature suggests that creating "ensemble" models that weigh individual models to create a single composite prediction can outperform any one individual model  [@anderson2017a; @araujo2007; @Dietterich2000]. We test this idea here by comparing two different ensemble models: a purely statistical ensemble constructed by boosted regression trees, and a XX curry thoughts on this terminology?XX mixed-methods ensemble model by published Fisheries Research Institute (FRI) forecasts. Both of these ensembles are generate model-of-model-predictions which we can compare to the predictions made by individual models. 
+The testing regime allows us to compare the predictive power, defined by SRMSE, of individual models at a variety of spatial resolutions. However, a substantial body of literature suggests that creating "ensemble" models that weigh individual models to create a single composite prediction can outperform any one individual model  [@anderson2017a; @araujo2007; @Dietterich2000]. We test this idea here by comparing two different ensemble models: a purely statistical ensemble constructed by a random forest, and a XX curry thoughts on this terminology?XX mixed-methods ensemble model by published Fisheries Research Institute (FRI) forecasts. Both of these ensembles are generate model-of-model-predictions which we can compare to the predictions made by individual models. 
 
-Each ensemble model is constructed by evaluating the performance of different models in the past and creating a prediction for the current time step based on the retrospective cross-validation performance of component models (the ensemble members).For the boosted regression tree ensemble, we predicted the total returns by river system as a function of the predictions by river system and age group from each individual candidate model. A conventional ensemble might be constructed by taking an AIC weighted mean of forecasts of each of the candidate models for a particular river system. By constructing an explicit model-of-models ensemble using boosted regression trees, we allow the choice of model weighting to vary depending on the performance of different models in different river systems and time periods [@anderson2017a].
+Each ensemble model is constructed by evaluating the performance of different models in the past and creating a prediction for the current time step based on the retrospective cross-validation performance of component models (the ensemble members). For the random forest ensemble, we predicted the total returns by river system as a function of the predictions by river system and age group from each individual candidate model. A conventional ensemble might be constructed by taking an AIC weighted mean of forecasts of each of the candidate models for a particular river system. By constructing an explicit model-of-models ensemble a random forest, we allow the choice of model weighting to vary depending on the performance of different models in different river systems and time periods [@anderson2017a].
 
 The FRI is a mixed-methods XX XX manually constructed ensemble model, which has used various methods throughout the years to arrive at pre-season forecasts for each river system based on the recent performance of different candidate models. The FRI forecast for a specific stock by age class combination was traditionally constructed by AIC-weighting across candidate linear sibling models. Candidate linear models predict returns of the target age class using returns of one or two younger age classes seen in prior years as predictors. These candidate predictive models were fit on two alternative time series, 1963 onward and 1980 onward, to account for broad-scale shifts in average Bristol Bay salmon population productivity following the shift in the Pacific Decadal Oscillation (PDO) in the late 1970's. Natural-scale and log-transformed transformations were both fit for all models. Since 2013 the FRI forecast ensemble has been constructed by comparing the performance of the traditional linear and log-linear AIC-weighted sibling models, random forest models, dynamic linear sibling models, boosted regression trees, and simple autoregressive integrated moving average (ARIMA) time series models, and selecting the model with the lowest residual error in predictions for the target stock-age group across the most recent 20-year time horizon.
 
@@ -425,12 +425,14 @@ age_system_return_plot
 ## Ensemble Forecasts {.unnumbered}
 
 
-The result that some models outperform others under specific circumstances (e.g. particular river systems or age classes) suggest a simple solution: pick the best model for the resolution of prediction required, or better yet create an ensemble model that can leverage the relative strengths of individual models into one improved forecast. We assessed the ability of ensemble models to outperform individual models here by selecting the top performing (in terms of SRMSE) ensemble model (either the FRI or the boosted regression tree model-of-models ensemble) for each of the main river systems, and compared the performance of the best-performing ensemble to the best-performing non-ensemble model in that river system. One of the two ensemble methods provide improved forecasts for three out of the seven river systems, relative to the best single non-ensemble model for that river system (Fig.\@ref(fig:ensemble-forecast)). In four of the seven river systems the boosted regression tree method produced the preferred ensemble (the FRI forecasts being preferable of the three ensembles in the other two river systems). In many of the river systems however, one of the individual models performed better than the ensemble (Fig.\@ref(fig:ensemble-forecast)). We attribute the inability of the the ensemble model to outperform individual models here to the small sample size on which to train the multi-model ensembles
+The result that some models outperform others under specific circumstances (e.g. particular river systems or age classes) suggest a simple solution: pick the best model for the resolution of prediction required, or better yet create an ensemble model that can leverage the relative strengths of individual models into one improved forecast. We assessed the ability of ensemble models to outperform individual models here by selecting the top performing (in terms of SRMSE) ensemble model (either the FRI or the random forest model-of-models ensemble) for each of the main river systems, and compared the performance of the best-performing ensemble to the best-performing non-ensemble model in that river system. One of the two ensemble methods provide improved forecasts for three out of the seven river systems, relative to the best single non-ensemble model for that river system (Fig.\@ref(fig:ensemble-forecast)). In four of the seven river systems the boosted regression tree method produced the preferred ensemble (the FRI forecasts being preferable of the three ensembles in the other two river systems). In many of the river systems however, one of the individual models performed better than the ensemble (Fig.\@ref(fig:ensemble-forecast)). We attribute the inability of the the ensemble model to outperform individual models here to the small sample size on which to train the multi-model ensembles
 
 
-```{r ensemble-forecast, fig.cap="Performance of candidate ensemble models. Shape of points indicates which ensemble model had the lowest scaled root mean squared error (SRMSE). FRI refers to the published forecasts by the Fisheries Research Institute. The boost tree ensemble is an ensemble model constructed by a boosted regression tree out of candidate model forecasts. The forecast from the best performing ensemble is plotted and denoted by point shape. Color of points shows the percent improvement of the best-performing ensemble over the best non-ensemble model. Blue colors indicate that the ensemble performed better than the best non-ensemble model, red colors that the best non-ensemble model performed better than the best ensemble model."}
+```{r ensemble-forecast, fig.cap="Performance of candidate ensemble models. Shape of points indicates which ensemble model had the lowest scaled root mean squared error (SRMSE). FRI refers to the published forecasts by the Fisheries Research Institute. The random forest ensemble is an ensemble model constructed by a boosted regression tree out of candidate model forecasts. The forecast from the best performing ensemble is plotted and denoted by point shape. Color of points shows the percent improvement of the best-performing ensemble over the best non-ensemble model. Blue colors indicate that the ensemble performed better than the best non-ensemble model, red colors that the best non-ensemble model performed better than the best ensemble model."}
 system_ensemble_forecast_figure
 ```
+
+## Frontiers in Performance
 
 The underlying assumption of such an ensemble strategy is that the information needed for an accurate forecast is present in the data, and the key is finding the model that is best able to identify and leverage that information. However, no model can find information that simply is not there, or succeed if it is based upon data that is subject to overwhelming observation error. Examining trends in the annual residuals by model and river system shows clear patterns. In some years and river systems, all models perform similarly well, indicating that the information needed for a good forecast was present and detectable by each of the models (e.g. Nushagak before 2015). In other years, only particular models performed well, while others struggled, indicating that information needed for a robust forecast was present but only some models were able to accurately quantify the underlying relationship, highlighting the value of ensemble methods (e.g. Naknek between 2005 and 2010). However, in other years and river systems all models struggled, for example the Wood River in 2018 and the Kvichak River in 2014. This provides evidence that the information needed to generate a robust forecast in those years was simply not present in the data that were available at the time (Fig.\@ref(fig:resids)).
 
@@ -559,7 +561,7 @@ age_system_performance_figure
 +----------------------------------------+-------------------------------------------------------------------------------+
 | Lag-1 (lag)                            | Forecast next year equal to observed returns last year                        |
 +----------------------------------------+-------------------------------------------------------------------------------+
-| Ensemble                               | A boosted regression tree ensemble made of other candidate models             |
+| Ensemble                               | A random forest ensemble made of other candidate models             |
 +----------------------------------------+-------------------------------------------------------------------------------+
 |                                        |                                                                               |
 +----------------------------------------+-------------------------------------------------------------------------------+
