just a few small edits

--- a/documents/salmon-forecast-paper.Rmd
+++ b/documents/salmon-forecast-paper.Rmd
@@ -301,7 +301,7 @@ Why might we expect modern computational tools to be well-suited to the task of 
 
 Rather than incorporate these factors directly, salmon forecasting has traditionally relied on cohort or "sibling" regression methods, in which the return abundance of an older age class is predicted by the abundance of younger age classes returning in prior years but originating from the same river system and brood year. For example, the return abundance of four-year old fish are predicted by the returns of three-year old fish observed in the previous season. There are good reasons for this practice: trends in sibling abundance internalize many factors affecting salmon returns. If a particular cohort suffers from poor environmental conditions and large amount of competition with other predators, the impacts of that will be reflected in the return abundance of younger age classes from the same cohort (i.e. originating from the same brood year) that experienced similar environmental conditions and resource availability, and by extension survival, as juveniles. However, this sibling regression method does have shortcomings, most notably the underlying assumption of consistency in the relationship between the abundance of age classes and stability in the maturation schedule (i.e. the probability of salmon maturing and returning to freshwater to spawn after a given number of years in the ocean). For example, if environmental conditions cause members of a cohort of salmon to spend more time at sea than in previous years, a sibling regression might under-predict the number of future returns. In addition, sibling regression requires accurate observations of the return abundance for younger sibling age classes, limiting the performance of these models in predicting returns of younger salmon for which few or no siblings (i.e. returning younger age classes) have yet been observed.
 
-We hypothesize that directly incorporating data on candidate potentially time-varying factors influencing and correlated with salmon return size, rather than relying on sibling returns alone, may help improve forecasting given the intricate dynamics of salmon populations. However, these variables are likely to have complex, non-linear, and non-stationary effects on salmon populations, potentially obscuring their value from conventional parametric statistical approaches, with user-defined parameters, structures, and error distributions. In order to explore this possibility, we use a suite of six methods together with a panel of data on salmon populations and environmental conditions in Bristol Bay, Alaska to explore what if any improvements in forecast skill can be achieved. These models include two machine learning methods, a random forest (rand\_forest), [@breiman2001; @wright2017] and a boosted regression tree, boost\_tee, [@chen2020]), empirical dynamic models (edm) [@munch2020 and references therein], and dynamic linear models (dlm)[ @petris2009; @pole1994]. We also include a lag-1 model, (lag\_1), as a performance benchmark, in which the predicted returns for a given age group and river system in a year are equal to the observed returns for that that age group in that river system in the prior year. Our goal here is not to establish whether one type of model performs inherently better than others, but to evaluate how use of different computer age models and data types can collectively improve forecast ability and identify frontiers in forecast ability given available data. While our tested methods made meaningful improvements in forecast accuracy in many cases, no one model type stood out as a clear winner, highlighting the need for multi-model inference in ecological forecasting.
+We hypothesize that directly incorporating data on candidate potentially time-varying factors influencing and correlated with salmon return size, rather than relying on sibling returns alone, may help improve forecasting given the intricate dynamics of salmon populations. However, these variables are likely to have complex, non-linear, and non-stationary effects on salmon populations, potentially obscuring their value from conventional parametric statistical approaches, with user-defined parameters, structures, and error distributions. In order to explore this possibility, we use a suite of six methods together with a panel of data on salmon populations and environmental conditions in Bristol Bay, Alaska to explore what if any improvements in forecast skill can be achieved. These models include two machine learning methods, a random forest (rand\_forest), [@breiman2001; @wright2017] and a boosted regression tree, boost\_tree, [@chen2020]), empirical dynamic models (edm) [@sugihara1990; @munch2020; @ye2020], and dynamic linear models (dlm)[ @petris2009; @pole1994]. We also include a lag-1 model, (lag\_1), as a performance benchmark, in which the predicted returns for a given age group and river system in a year are equal to the observed returns for that that age group in that river system in the prior year. Our goal here is not to establish whether one type of model performs inherently better than others, but to evaluate how use of different computer age models and data types can collectively improve forecast ability and identify frontiers in forecast ability given available data. While our tested methods made meaningful improvements in forecast accuracy in many cases, no one model type stood out as a clear winner, highlighting the need for multi-model inference in ecological forecasting.
 
 
 # Methods {.unnumbered}
@@ -463,7 +463,7 @@ system_varimportance_figure
 
 # Discussion {.unnumbered}
 
-Modern computational tools can improve our ability to forecast annual Bristol Bay sockeye salmon returns, substantially in some cases. Individual models used here improved age group specific forecasts by an average of `r percent(-age_improv$srmse_improv)` (measured as reduction in RMSE) and river system specific forecasts by `r percent(-sys_improv$srmse_improv)`. Ensembles of these individual models, both formal (random forest) and informal (FRI) in nature, allowed for further improvement in predictive performance for some salmon stocks. However, no one modeling method emerged as a clear winner. Using multiple types of highly flexible modern computational tools can provide insight into whether historic limits to forecast skill were likely due to limitations in the information content of the available data, or from simply not finding the best model to apply to the data at hand. While we were able to improve forecast skill of Bristol Bay sockeye salmon substantially in some instances, that all evaluated models failed for specific systems and years provides strong evidence that further improvements in forecast skill depend on identifying and collecting new sources of data.
+Modern computational tools can improve our ability to forecast annual Bristol Bay sockeye salmon returns, substantially in some cases. Individual models used here improved age group specific forecasts by an average of `r percent(-age_improv$srmse_improv)` (measured as reduction in RMSE) and river system specific forecasts by `r percent(-sys_improv$srmse_improv)`. Ensembles of these individual models, both formal (random forest) and informal (FRI) in nature, allowed for further improvement in predictive performance for some salmon stocks. However, no one modeling method emerged as a clear winner. Using multiple types of highly flexible modern computational tools can provide insight into whether historic limits to forecast skill were likely due to limitations in the information content of the available data, or from simply not finding the best model to apply to the data at hand. While we were able to improve forecast skill of Bristol Bay sockeye salmon substantially in some instances, in other years and systems, all models performed poorly. Such widespread low predictive skill may result from not including a relevant data set that strongly affects salmon dynamics. However, this may be less likely given that there are specific years in which models perform poorly, followed by years with improved forecasts. It seems more likely that there are years with anomalous environmental relationships and system dynamics. In these situations assuming the future will be similar to the past may not be justified, and future studies might focus on modeling outlier events similar to (BLACK SWAN EVENTS IN ANIMAL POPULATION; SEAN C ANDERSON; https://www.pnas.org/content/114/12/3252.short).
 
 The annual return of sockeye salmon to the river systems of Bristol Bay Alaska is an economic and ecological marvel, providing critical nutrients and value to Alaska's ecosystems, economy, and people. Efficient and sustainable use of this critical natural and cultural resource depends in part on the ability to accurately forecast the number of salmon that will return each year, prior to the fishing season. As such, accurate and precise forecasts for future salmon abundance are vitally important to the biological and economic sustainability of this important fishery. Allowing environmental and cross-stock correlations to dynamically inform the predictions of sockeye salmon through modern predictive models produced meaningful improvements in our ability to forecast annual returns of these iconic fish.
 
