--- a/documents/salmon-forecast-paper.Rmd
+++ b/documents/salmon-forecast-paper.Rmd
@@ -476,7 +476,7 @@ Traditional forecast methods employed by the Fisheries Research Institute involv
 
 We demonstrate here how modern computationally intensive approaches can provide improvements in ecological forecasting. @ward2014 also explored the use of models similar to those used here in the context of ecological forecasting of time-series data from natural populations. They however found that the sorts of modern computational tools explored here generally performed worse than simple autoregressive models, while being substantially more computationally intensive. In contrast we found that our lag\_1 benchmark model was always outperformed or equaled by one or more of our models across every resolution we evaluated. What might explain this discrepancy? @ward2014 constrained themselves to making predictions of future population size solely based on historic population size, while the forecast methods we explore here were informed by the abundance of multiple salmon age classes or stocks, and in some cases by environmental conditions and the abundance of other salmon species. In this way, the methods evaluated by @ward2014 are most similar to the EDM models explored here, which provided the least improvement over our lagged benchmark models. We note however, that identification and inclusion of environmental relationships may improve EDM forecasts but was beyond the scope of this analysis.
 
-We would only expect computer age methods to provide an improvement over simpler methods if there are substantial complexities in the relationship between past and future abundance that simpler models miss (i.e. the simpler models are misspecified). The results of @ward2014 and the performance of the EDM models as used here (without environmental covaraites or cross-stock correlations) relative to our benchmark models suggest simpler models may indeed be preferable when only historic timeseries of individual stocks are available as a data source, and additional informative predictors (such as environmental data or nearby related systems) are not available.
+We would only expect computer age methods to provide an improvement over simpler methods if there are substantial complexities in the relationship between past and future abundance that simpler models miss (i.e. the simpler models are misspecified). The results of @ward2014 and the performance of the EDM models as used here (without environmental covariates or cross-stock predictions) relative to our benchmark models suggest simpler models may indeed be preferable when only historic timeseries of individual stocks are available as a data source, and additional informative predictors (such as environmental data or nearby related systems) are not available.
 
 In contrast the DLM and machine learning methods both have access to additional information that may account for their ability to outperform simpler models. The DLM model, while still relying solely on historic return data of individual river systems, provides structure that autoregressive style models might miss. In particular, the DLM model leverages our ability to track cohorts over time and use these data as predictors in a model while explicitly accounting changes in average salmon population productivity, survival, and maturation schedule over time. The machine learning methods explored here have access to much more data than the historic returns alone, including environmental conditions and abundance of other salmonids. In addition, the machine learning methods used here are able to leverage correlations in returns across multiple age groups and river systems (Fig.\@ref(fig:imp-plot)). While we have access to over 50 years of data, longer than some of the series reported in @ward2014, our sample sizes are still minute compared to the sample sizes in most applications of machine learning methods, indicating that these methods can still be used with the relatively small sample sizes often encountered in forecasting the population dynamics of harvested species. The results of @ward2014 suggest that more complex models may provide little benefit when the only data available are historic trends in the population being forecasted. We find though that modern computational forecasting tools can provide meaningful improvements when given additional covariates and/or structure.
 
