submitted to eco-apps, merging back to master

--- a/references.bib
+++ b/references.bib
@@ -492,3 +492,34 @@
   language = {en},
   number = {4},
 }
+
+@article{akaike1974,
+  title = {A New Look at the Statistical Model Identification},
+  volume = {19},
+  issn = {0018-9286},
+  abstract = {The history of the development of statistical hypothesis testing in time series analysis is reviewed briefly and it is pointed out that the hypothesis testing procedure is not adequately defined as the procedure for statistical model identification. The classical maximum likelihood estimation procedure is reviewed and a new estimate minimum information theoretical criterion (AIC) estimate (MAICE) which is designed for the purpose of statistical identification is introduced. When there are several competing models the MAICE is defined by the model and the maximum likelihood estimates of the parameters which give the minimum of AIC defined by AIC = (-2)log-(maximum likelihood) + 2(number of independently adjusted parameters within the model). MAICE provides a versatile procedure for statistical model identification which is free from the ambiguities inherent in the application of conventional hypothesis testing procedure. The practical utility of MAICE in time series analysis is demonstrated with some numerical examples.},
+  number = {6},
+  journal = {IEEE Transactions on Automatic Control},
+  doi = {10.1109/TAC.1974.1100705},
+  author = {Akaike, H.},
+  month = dec,
+  year = {1974},
+  keywords = {time series,History,time series analysis,Art,Estimation theory,Linear systems,Maximum likelihood estimation,maximum-likelihood (ML) estimation,Parameter identification,Roundoff errors,Sampling methods,Stochastic processes,Testing},
+  pages = {716-723}
+}
+
+@article{anderson2017b,
+  title = {Reply to {{Youngflesh}} and {{Lynch}}: {{Migration}} and Population Growth Rate in Animal Black-Swan Events},
+  issn = {0027-8424, 1091-6490},
+  shorttitle = {Reply to {{Youngflesh}} and {{Lynch}}},
+  abstract = {National Academy of Sciences},
+  language = {en},
+  journal = {Proceedings of the National Academy of Sciences},
+  doi = {10.1073/pnas.1714157114},
+  author = {Anderson, Sean C. and Branch, Trevor A. and Cooper, Andrew B. and Dulvy, Nicholas K.},
+  month = oct,
+  year = {2017},
+  pages = {201714157},
+  file = {/Users/danovando/Reference Library/Anderson et al. - 2017 - Reply to Youngflesh and Lynch Migration and popul.pdf}
+}
+
