--- a/documents/salmon-forecast-paper.Rmd
+++ b/documents/salmon-forecast-paper.Rmd
@@ -8,7 +8,8 @@ author:
   - Ray Hilborn
 date: "`r Sys.Date()`"
 output: 
-  bookdown::pdf_document2: default
+  bookdown::pdf_document2:
+    keep_tex: true
   bookdown::word_document2:
     reference_docx: template.docx
 bibliography: "../references.bib"
@@ -185,6 +186,16 @@ mean_srmse_delta <- system_performance %>%
   ungroup() %>% 
   summarise(mmd = mean(delta))
 
+comp_sys_improvement <- sys_performers %>% 
+  select(model, system, rmse) %>% 
+  left_join(benchmarks, by = "system") %>% 
+  ungroup() %>% 
+  summarise(imp_on_fri = -mean(rmse / fri - 1),
+            min_imp_on_fri = min(-(rmse / fri - 1)),
+            max_imp_on_fri = max(-(rmse / fri - 1)),
+            imp_on_lag =  -mean(rmse / lag - 1))
+
+
 sys_improv <- system_performance %>% 
   select(model, system, srmse) %>% 
   pivot_wider(names_from = model, values_from = srmse) %>% 
@@ -268,11 +279,11 @@ Daniel Ovando^a^\*, Curry Cunningham^b^,Peter Kuriyama^c^,Christopher Boatright^
 
 ## Abstract {.unnumbered}
 
-Modern computational tools such as machine learning have transformed predictive fields from advertising to weather forecasting. However, these methods are not yet heavily utilized for managing ecological systems. Salmon are a natural, cultural, and economic keystone of Alaska, and accurate pre-season forecasts of the numbers of sockeye salmon (*Oncorhynchus nerka*), that will return to the river systems of Bristol Bay play an important role in management and harvesting decisions. These predictions are challenging though, given the complex set of dynamic factors that affect salmon. We use data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to identify the frontiers in forecast accuracy possible given currently available data. By leveraging dynamic environmental information and correlations between salmon populations, we were able to reduce forecast error by on average `r percent(comp_sys_improvement$imp_on_fri)` relative to a simple mull model, and by XX relative to a benchmark model used in the system. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.
+Modern computational tools such as machine learning have transformed predictive fields from advertising to weather forecasting. However, these methods are not yet heavily utilized for managing ecological systems. Salmon are a natural, cultural, and economic keystone of Alaska, and accurate pre-season forecasts of the numbers of sockeye salmon (*Oncorhynchus nerka*), that will return to the river systems of Bristol Bay play an important role in management and harvesting decisions. These predictions are challenging though, given the complex set of dynamic factors that affect salmon. We use data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to identify the frontiers in forecast accuracy possible given currently available data. By leveraging dynamic environmental information and correlations between salmon populations, we were able to reduce forecast error by on average `r percent(comp_sys_improvement$imp_on_lag)` relative to a simple null model, and by `r percent(comp_sys_improvement$imp_on_fri)` relative to a benchmark model used in the system. Our results demonstrate both the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.
 
 ## Keywords {.unnumbered}
 
-Machine learning, predictive modeling, salmon, ecological forecasting, value of information
+Alaska, Salmon,Machine learning,Empirical Dynamic Modeling, Dynamic Linear Models, Predictive Modeling, Ecological Forecasting
 
 \newpage
 
@@ -284,17 +295,17 @@ Machine learning, predictive modeling, salmon, ecological forecasting, value of 
 
 Animal populations exhibit complex dynamics driven by interactions with many aspects of their ecosystem. Predicting the outcomes of these dynamics is a critical task of natural resource management; Forecasts of future abundance are often used to set fisheries regulations, vessel operators may make decisions about alternative fisheries based on predicted abundance, and industries and communities use forecasts to inform long-term and short-term investment plans in staffing and production capacity. However, the methods used to make these ecological predictions are often decades old and generally do not go beyond forward projection from age-structured models.
 
-The past two decades have seen explosive progress in the ability of modern "computer age" tools to improve predictive models [@efron2016], revolutionizing fields such as financial modeling, weather forecasting, and medicine. However, these methods remain relatively unused in ecological forecasting, particularly in an applied setting [@peters2014]. We use the ecologically and economically critical sockeye salmon (*Oncorhynchus nerka*) populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to identify frontiers in forecast accuracy given currently available data.
+The past two decades have seen explosive progress in the ability of modern "computer age" tools to improve predictive models [@efron2016], revolutionizing fields such as financial modeling, weather forecasting, and medicine. However, these methods remain relatively unused in ecological forecasting, particularly in an applied setting [@peters2014]. We use the ecologically and economically critical sockeye salmon (*Oncorhynchus nerka*) populations of Bristol Bay, Alaska to demonstrate the use of modern computation tools in applied predictive modeling, and show how they can be used to identify frontiers in forecast accuracy given currently available data.
 
 The commercial salmon fishery in Bristol Bay, Alaska is the single largest sockeye salmon fishery in the world [@steiner2011]. The estimated wholesale value of the Bristol Bay commercial sockeye harvest was \$390 million USD in 2010, providing approximately one-sixth of the total value of all United States seafood exports [@knapp2013], reaching a value of \$508 million by 2017 [@mcdowellgroup2018]. Salmon returning to Bristol Bay also provide vital food security for subsistence-dependent Alaskan communities, and are critical vectors of marine-derived nutrients that support vibrant freshwater habitats [@naiman2002; @schindler2003]. Sustainable management of the Bristol Bay salmon fishery depends in part on the accuracy of preseason forecasts for salmon abundance, which inform development and implementation of inseason harvest strategies and successful operation of subsistence and commercial fisheries. Preseason forecasts are also important for planning by the processing industry, as a basis for identifying the appropriate level of supplies, equipment, and personnel necessary to process the annual harvest. As such, the accuracy of salmon forecasts have a direct influence on the profitability and efficiency of the salmon industry as a whole.
 
-Sockeye salmon are born in freshwater, where they spend the first one or more years of their lives. Eventually, these fish migrate to the ocean, where they live the remainder of their lives until returning to their natal river systems to spawn and then die. Sockeye salmon can spend a range of years in these freshwater and oceanic phases, denoted as "age groups". We denote age groups here by the format "years spent in freshwater ."years spent in the ocean". For example, a fish in the 1.2 age group spent one winter post-hatching in freshwater and migrating to sea two years after it was spawned, and 2 winters in the ocean before returning to freshwater to spawn. The Bristol Bay sockeye salmon fishery is primarily made up of salmon from seven different river systems, each of which is managed as a separate stock (Fig.\@ref(fig:returns)).
+Sockeye salmon are born in freshwater, where they spend the first one or more years of their lives. Eventually, these fish migrate to the ocean, where they live the remainder of their lives until returning to their natal river systems to spawn and then die. Sockeye salmon can spend a range of years in these freshwater and oceanic phases, denoted as "age groups". Following conventions in the salmon literature, we denote age groups here by the format "years spent in freshwater.years spent in the ocean". For example, a fish in the 1.2 age group spent one winter post-hatching in freshwater and migrating to sea two years after it was spawned, and 2 winters in the ocean before returning to freshwater to spawn. The Bristol Bay sockeye salmon fishery is primarily made up of salmon from seven different river systems, each of which is managed as a separate stock (Fig.\@ref(fig:returns)).
 
-```{r returns, fig.cap = "Annual total abundance of returning sockeye salmon (*Oncorhynchus nerka*) to Bristol Bay, Alaska (A), by river system (B), and by age group (C). Numbers in millions of salmon. Age group is formatted by ‘years spent in freshwater’.‘years spent in ocean’. Map adapted from Cunningham et al. [@cunningham2019].", fig.width=7, fig.asp=.8}
+```{r returns, fig.cap = "Annual total abundance of returning sockeye salmon (*Oncorhynchus nerka*) to Bristol Bay, Alaska (A), by river system (B), and by age group (C). Numbers in millions of salmon. Age group is formatted by ‘years spent in freshwater’.‘years spent in ocean’. Map adapted from @cunningham2019.", fig.width=7, fig.asp=.8}
 return_plot
 ```
 
-Why might we expect modern computational tools to be well-suited to the task of salmon forecasting? Methods such as machine learning excel at identifying and exploiting complex interactions between variables in a system. Conversely, "traditional" statistical methods often restrict themselves to simplified (e.g. linear) and often non-dynamic representations of natural systems, both for analytical tractability and to facilitate understanding of underlying processes. Typically, these traditional statistical methods are concerned with explicitly estimating and interpreting model parameters rather than solely forecasting responses, such as population size [@beyan2020; @malde2020]. We would expect modern computational tools to show substantial improvement in predictive power when the "true" underlying system linking observed variables and outcomes differs dramatically from more simplistic representations of the system approximated by conventional statistical approaches. In the case of salmon, we know that inter-annual variation in run sizes is affected by a wide range of ecosystem variables, including spawning success, river conditions, oceanic predator and prey abundance, and competition with other salmonids [@connors2020].
+Why might we expect modern computational tools to be well-suited to the task of salmon forecasting? Methods such as machine learning excel at identifying and exploiting potentially complex correlations between variables in a system. Conversely, "traditional" statistical methods often restrict themselves to simplified (e.g. linear) and often non-dynamic representations of natural systems, both for analytical tractability and to facilitate understanding of underlying processes. Typically, these traditional statistical methods are concerned with explicitly estimating and interpreting model parameters rather than solely forecasting responses, such as population size [@beyan2020; @malde2020]. We would expect modern computational tools to show substantial improvement in predictive power when the "true" underlying system linking observed variables and outcomes differs dramatically from more simplistic representations of the system approximated by conventional statistical approaches. In the case of salmon, we know that inter-annual variation in run sizes is affected by a wide range of ecosystem variables, including spawning success, river conditions, oceanic predator and prey abundance, and competition with other salmonids [@connors2020].
 
 ```{r}
 
@@ -427,10 +438,10 @@ age_system_return_plot
 ## Ensemble Forecasts {.unnumbered}
 
 
-The result that some models outperform others under specific circumstances (e.g. particular river systems or age classes) suggest a simple solution: pick the best model for the resolution of prediction required, or better yet create an ensemble model that can leverage the relative strengths of individual models into one improved forecast. We assessed the ability of ensemble models to outperform individual models here by selecting the top performing (in terms of SRMSE) ensemble model (either the FRI or the random forest model-of-models ensemble) for each of the main river systems, and compared the performance of the best-performing ensemble to the best-performing non-ensemble model in that river system. One of the two ensemble methods provide improved forecasts for three out of the seven river systems, relative to the best single non-ensemble model for that river system (Fig.\@ref(fig:ensemble-forecast)). In five of the seven river systems the random forest ensemble produced the preferred ensemble, with the FRI forecasts being preferable of the two ensembles in the other two river systems). In many of the river systems however, one of the individual models performed better than the ensemble (Fig.\@ref(fig:ensemble-forecast)). We attribute the inability of the the ensemble model to outperform individual models here to the small sample size on which to train the multi-model ensembles
+The result that some models outperform others under specific circumstances (e.g. particular river systems or age classes) suggests a simple solution: pick the best model for the resolution of prediction required, or better yet create an ensemble model that can leverage the relative strengths of individual models into one improved forecast. We assessed the ability of ensemble models to outperform individual models here by selecting the top performing (in terms of SRMSE) ensemble model (either the FRI or the random forest model-of-models ensemble) for each of the main river systems, and compared the performance of the best-performing ensemble to the best-performing non-ensemble model in that river system. One of the two ensemble methods provide improved forecasts for three out of the seven river systems, relative to the best single non-ensemble model for that river system (Fig.\@ref(fig:ensemble-forecast)). In five of the seven river systems the random forest ensemble produced the preferred ensemble, with the FRI forecasts being preferable of the two ensembles in the other two river systems). In many of the river systems however, one of the individual models performed better than the ensemble (Fig.\@ref(fig:ensemble-forecast)). We attribute the inability of the the ensemble model to outperform individual models here to the small sample size on which to train the multi-model ensembles
 
 
-```{r ensemble-forecast, fig.cap="Performance of candidate ensemble models. Shape of points indicates which ensemble model had the lowest scaled root mean squared error (SRMSE). FRI refers to the published forecasts by the Fisheries Research Institute. The random forest ensemble is an ensemble model constructed by a boosted regression tree out of candidate model forecasts. The forecast from the best performing ensemble is plotted and denoted by point shape. Color of points shows the percent improvement of the best-performing ensemble over the best non-ensemble model. Blue colors indicate that the ensemble performed better than the best non-ensemble model, red colors that the best non-ensemble model performed better than the best ensemble model."}
+```{r ensemble-forecast, fig.cap="Performance of candidate ensemble models. Shape of points indicates which ensemble model had the lowest scaled root mean squared error (SRMSE). FRI refers to the published forecasts by the Fisheries Research Institute. The random forest ensemble is an ensemble model constructed by random forest made out of candidate model forecasts. The forecast from the best performing ensemble is plotted and denoted by point shape. Color of points shows the percent improvement of the best-performing ensemble over the best non-ensemble model. Blue colors indicate that the ensemble performed better than the best non-ensemble model, red colors that the best non-ensemble model performed better than the best ensemble model."}
 system_ensemble_forecast_figure
 ```
 
@@ -464,7 +475,7 @@ system_varimportance_figure
 
 # Discussion {.unnumbered}
 
-Modern computational tools can improve our ability to forecast annual Bristol Bay sockeye salmon returns, substantially in some cases. Individual models used here improved age group specific forecasts by an average of `r percent(-age_improv$srmse_improv)` (measured as reduction in RMSE) and river system specific forecasts by `r percent(-sys_improv$srmse_improv)`. Ensembles of these individual models, both formal (random forest) and informal (FRI) in nature, allowed for further improvement in predictive performance for some salmon stocks. However, no one modeling method emerged as a clear winner. Using multiple types of highly flexible modern computational tools can provide insight into whether historic limits to forecast skill were likely due to limitations in the information content of the available data, or from simply not finding the best model to apply to the data at hand. While we were able to improve forecast skill of Bristol Bay sockeye salmon substantially in some instances, in other years and systems, all models performed poorly. Such widespread low predictive skill may result from not including a relevant data set that strongly affects salmon dynamics. However, this may be less likely given that there are specific years in which models perform poorly, followed by years with improved forecasts. It seems more likely that there are years with anomalous environmental relationships and system dynamics. In these situations assuming the future will be similar to the past may not be justified, and future studies might focus on modeling outlier events similar to (BLACK SWAN EVENTS IN ANIMAL POPULATION; SEAN C ANDERSON; https://www.pnas.org/content/114/12/3252.short).
+Modern computational tools can improve our ability to forecast annual Bristol Bay sockeye salmon returns, substantially in some cases. Individual models used here improved age group specific forecasts by an average of `r percent(-age_improv$srmse_improv)` (measured as reduction in RMSE) and river system specific forecasts by `r percent(-sys_improv$srmse_improv)`. Ensembles of these individual models, both formal (random forest) and informal (FRI) in nature, allowed for further improvement in predictive performance for some salmon stocks. However, no one modeling method emerged as a clear winner. Using multiple types of highly flexible modern computational tools can provide insight into whether historic limits to forecast skill were likely due to limitations in the information content of the available data, or from simply not finding the best model to apply to the data at hand. While we were able to improve forecast skill of Bristol Bay sockeye salmon substantially in some instances, in other years and systems, all models performed poorly. Such widespread low predictive skill may result from not including a relevant data set that strongly affects salmon dynamics. However, this may be less likely given that there are specific years in which models perform poorly, followed by years with improved forecasts. It seems more likely that there are years with anomalous environmental relationships and system dynamics. In these situations assuming the future will be similar to the past may not be justified, and future studies might focus on modeling outlier events similar in the manner of @anderson2017b.
 
 The annual return of sockeye salmon to the river systems of Bristol Bay Alaska is an economic and ecological marvel, providing critical nutrients and value to Alaska's ecosystems, economy, and people. Efficient and sustainable use of this critical natural and cultural resource depends in part on the ability to accurately forecast the number of salmon that will return each year, prior to the fishing season. As such, accurate and precise forecasts for future salmon abundance are vitally important to the biological and economic sustainability of this important fishery. Allowing environmental and cross-stock correlations to dynamically inform the predictions of sockeye salmon through modern predictive models produced meaningful improvements in our ability to forecast annual returns of these iconic fish.
 
@@ -511,61 +522,3 @@ All data, code, and package dependencies needed to fully reproduce our results a
 ::: {#refs}
 :::
 
-# Supporting Information {.unnumbered}
-
-\renewcommand{\thefigure}{S\arabic{figure}}
-
-\setcounter{figure}{0}
-
-\renewcommand{\thetable}{S\arabic{table}}
-
-\setcounter{table}{0}
-
-```{r srmse-fig, fig.cap="Scaled root mean squared error (SRMSE) for each model type (rows) by age group and system (columns).", fig.height=3}
-srmse_summary_figure + 
-  theme(axis.text.x = element_text(size = 6))
-```
-
-```{r srmse-fig-two, fig.cap="Best performing model in terms of scaled root mean squared error (SRMSE) for each age group and river system. Color indicates the percent improvement in SRMSE between the best performing model and the historic published Fisheries Research Institute (FRI) forecasts."}
-age_system_performance_figure
-```
-
-+-----------------------------------+-----------------------------------------------------------------------------------------------+-------------------------------------------------------+
-| Data Type                         | Description                                                                                   | Dataset ID                                            |
-+===================================+===============================================================================================+=======================================================+
-| Sea Surface Temperature           | HadISST Average Sea Surface Temperature, 1°, Global, Monthly, 1870-present                    | erdHadISST                                            |
-+-----------------------------------+-----------------------------------------------------------------------------------------------+-------------------------------------------------------+
-| Sea Level Pressure                | Sea Level Pressure Monthly Mean at Surface, ICOADS, 1-degree, Enhanced, Monthly, 1960-present | esrlIcoads1ge                                         |
-+-----------------------------------+-----------------------------------------------------------------------------------------------+-------------------------------------------------------+
-| Upwelling                         | u-wind Stress Monthly Mean at Surface, ICOADS, 1-degree, Enhanced, Monthly, 1960-present      | esrlIcoads1ge                                         |
-+-----------------------------------+-----------------------------------------------------------------------------------------------+-------------------------------------------------------+
-|                                   |                                                                                               |                                                       |
-+-----------------------------------+-----------------------------------------------------------------------------------------------+-------------------------------------------------------+
-| Pacific Decadal Oscillation Index | PDO Index                                                                                     | <http://research.jisao.washington.edu/pdo/PDO.latest> |
-+-----------------------------------+-----------------------------------------------------------------------------------------------+-------------------------------------------------------+
-
-: (\#tab:env-data) Environmental Covariates Evaluated
-
-+----------------------------------------+-------------------------------------------------------------------------------+
-| Model Name                             | Description                                                                   |
-+========================================+===============================================================================+
-| Boosted Regression Trees (boost\_tree) | An ensemble of boosted regression trees                                       |
-+----------------------------------------+-------------------------------------------------------------------------------+
-| Random Forest (rand\_forest)           | An ensemble of regression trees                                               |
-+----------------------------------------+-------------------------------------------------------------------------------+
-| Recurrent Neural Network (rnn)         | A neural network with a memory component implemented through recurrent layers |
-+----------------------------------------+-------------------------------------------------------------------------------+
-| Dynamic Linear Model (dlm)             | Sibling regression with dynamic components                                    |
-+----------------------------------------+-------------------------------------------------------------------------------+
-| Simplex                                | simplex projection                                                            |
-+----------------------------------------+-------------------------------------------------------------------------------+
-| S-map                                  | Sequentially locally weighted global linear maps                              |
-+----------------------------------------+-------------------------------------------------------------------------------+
-| Lag-1 (lag_1)                            | Forecast next year equal to observed returns last year                        |
-+----------------------------------------+-------------------------------------------------------------------------------+
-| Ensemble                               | A random forest ensemble made of other candidate models             |
-+----------------------------------------+-------------------------------------------------------------------------------+
-|                                        |                                                                               |
-+----------------------------------------+-------------------------------------------------------------------------------+
-
-: (\#tab:models) Candidate forecasting models evaluated
