correcting anderson reference

--- a/documents/salmon-forecast-paper.Rmd
+++ b/documents/salmon-forecast-paper.Rmd
@@ -475,7 +475,7 @@ system_varimportance_figure
 
 # Discussion {.unnumbered}
 
-Modern computational tools can improve our ability to forecast annual Bristol Bay sockeye salmon returns, substantially in some cases. Individual models used here improved age group specific forecasts by an average of `r percent(-age_improv$srmse_improv)` (measured as reduction in RMSE) and river system specific forecasts by `r percent(-sys_improv$srmse_improv)`. Ensembles of these individual models, both formal (random forest) and informal (FRI) in nature, allowed for further improvement in predictive performance for some salmon stocks. However, no one modeling method emerged as a clear winner. Using multiple types of highly flexible modern computational tools can provide insight into whether historic limits to forecast skill were likely due to limitations in the information content of the available data, or from simply not finding the best model to apply to the data at hand. While we were able to improve forecast skill of Bristol Bay sockeye salmon substantially in some instances, in other years and systems, all models performed poorly. Such widespread low predictive skill may result from not including a relevant data set that strongly affects salmon dynamics. However, this may be less likely given that there are specific years in which models perform poorly, followed by years with improved forecasts. It seems more likely that there are years with anomalous environmental relationships and system dynamics. In these situations assuming the future will be similar to the past may not be justified, and future studies might focus on modeling outlier events similar in the manner of @anderson2017b.
+Modern computational tools can improve our ability to forecast annual Bristol Bay sockeye salmon returns, substantially in some cases. Individual models used here improved age group specific forecasts by an average of `r percent(-age_improv$srmse_improv)` (measured as reduction in RMSE) and river system specific forecasts by `r percent(-sys_improv$srmse_improv)`. Ensembles of these individual models, both formal (random forest) and informal (FRI) in nature, allowed for further improvement in predictive performance for some salmon stocks. However, no one modeling method emerged as a clear winner. Using multiple types of highly flexible modern computational tools can provide insight into whether historic limits to forecast skill were likely due to limitations in the information content of the available data, or from simply not finding the best model to apply to the data at hand. While we were able to improve forecast skill of Bristol Bay sockeye salmon substantially in some instances, in other years and systems, all models performed poorly. Such widespread low predictive skill may result from not including a relevant data set that strongly affects salmon dynamics. However, this may be less likely given that there are specific years in which models perform poorly, followed by years with improved forecasts. It seems more likely that there are years with anomalous environmental relationships and system dynamics. In these situations assuming the future will be similar to the past may not be justified, and future studies might focus on modeling outlier events similar in the manner of @anderson2017c.
 
 The annual return of sockeye salmon to the river systems of Bristol Bay Alaska is an economic and ecological marvel, providing critical nutrients and value to Alaska's ecosystems, economy, and people. Efficient and sustainable use of this critical natural and cultural resource depends in part on the ability to accurately forecast the number of salmon that will return each year, prior to the fishing season. As such, accurate and precise forecasts for future salmon abundance are vitally important to the biological and economic sustainability of this important fishery. Allowing environmental and cross-stock correlations to dynamically inform the predictions of sockeye salmon through modern predictive models produced meaningful improvements in our ability to forecast annual returns of these iconic fish.
 
