--- a/references.bib
+++ b/references.bib
@@ -523,3 +523,27 @@
   file = {/Users/danovando/Reference Library/Anderson et al. - 2017 - Reply to Youngflesh and Lynch Migration and popul.pdf}
 }
 
+
+@article{anderson2017c,
+  title = {Black-Swan Events in Animal Populations},
+  author = {Anderson, Sean C. and Branch, Trevor A. and Cooper, Andrew B. and Dulvy, Nicholas K.},
+  year = {2017},
+  month = mar,
+  volume = {114},
+  pages = {3252--3257},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1611525114},
+  chapter = {Biological Sciences},
+  copyright = {\textcopyright{}  . Freely available online through the PNAS open access option.},
+  file = {/Users/danovan/Google Drive/references/Anderson et al. - 2017 - Black-swan events in animal populations.pdf;/Users/danovan/Zotero/storage/3XZ96XFA/3252.html},
+  journal = {Proceedings of the National Academy of Sciences},
+  keywords = {die-offs,ecological risk,ecological surprises,mass mortality,population dynamics},
+  language = {en},
+  number = {12},
+  pmid = {28270622}
+}
+
+
+
+
