--- a/documents/salmon-forecast-paper-si.Rmd
+++ b/documents/salmon-forecast-paper-si.Rmd
@@ -14,7 +14,7 @@ output:
   pdf_document: default
 subtitle: Supporting Information
 bibliography: ../references.bib
-csl: ecological-applications.csl
+csl: canadian-journal-of-fisheries-and-aquatic-sciences.csl
 params:
   results_name: v1.0.0.9000
 linkcolor: blue
