--- a/references.bib
+++ b/references.bib
@@ -633,7 +633,13 @@
 }
 
 
-
+@Manual{chamberlain2019,
+  title = {rerddap: General Purpose Client for 'ERDDAP' Servers},
+  author = {Scott Chamberlain},
+  year = {2019},
+  note = {R package version 0.6.5},
+  url = {https://CRAN.R-project.org/package=rerddap},
+}
 
 
 
